[package]
name = "barium_core"
version = "0.3.3"
edition = "2024"
description = "Barium figures out how to optimise a workout by figuring out the optimal plates to use for each (dumb/bar)bell for each exercise."
license = "MIT"

[dependencies]
anyhow = "1.0.99"
clap = "4.5.47"
derive_more = { version = "2.0.1", features = ["into_iterator", "from", "display"] }
itertools = "0.14.0"
petgraph = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
uom = { version = "0.37.0",  features = ["autoconvert", "u32", "si", "std", "serde"]}
